--- a/contacts.html
+++ b/contacts.html
@@ -3,14 +3,14 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Contacts</title>
+    <title>Home</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700">
+    <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic%7CPoppins:300,400,500,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
@@ -18,7 +18,7 @@
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <!-- Page-->
-    <div class="text-center page"><a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"></a>
+    <div class="text-center page"><!-- <a class="banner banner-top" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid.jpg" alt="" height="0"></a> -->
       <!-- Page preloader-->
       <div class="page-loader">
         <div>
@@ -50,7 +50,7 @@
               <div class="window"></div>
               <div class="window"></div>
               <div class="door"></div>
-              <div class="hotel-sign"><span>H</span><span>O</span><span>T</span><span>E</span><span>L</span></div>
+              <div class=""><!-- <span>H</span><span>O</span><span>T</span><span>E</span><span>L</span> --></div>
             </div>
           </div>
         </div>
@@ -67,11 +67,12 @@
                     <ul class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" href="#"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" href="#"></a></li>
-                      <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li>
+                     <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
                 </div>
                 <div class="center-side">
+                  <!-- RD Navbar Brand-->
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand fullwidth-brand"><a class="brand-name" href="index.html"><img src="images/logo-default-314x48.png" alt="" width="314" height="48"/></a></div>
                 </div>
@@ -80,7 +81,7 @@
                   <div class="contact-info">
                     <div class="unit unit-middle unit-horizontal unit-spacing-xs">
                       <div class="unit__left"><span class="icon icon-primary text-middle mdi mdi-phone"></span></div>
-                      <div class="unit__body"><a class="text-middle" href="tel:#">+1 (409) 987–5874</a></div>
+                      <div class="unit__body"><a class="text-middle" href="tel:#">+ 995 555 398 282</a></div>
                     </div>
                   </div>
                 </div>
@@ -100,15 +101,16 @@
                 <div class="rd-navbar-nav-wrap">
                   <div class="rd-navbar-nav-scroll-holder">
                     <ul class="rd-navbar-nav">
-                      <li><a href="index.html">Home</a>
+                      <li ><a href="index.html">Home</a>
                       </li>
-                      <li><a href="about-us.html">About Us</a>
+                      <li><a href="apartments.html">Apartments</a>
+                      </li>
+                       <li><a href="gallery.html">Gallery</a>
                       </li>
                       <li class="active"><a href="contacts.html">Contacts</a>
                       </li>
-                      <li><a href="typography.html">Typography</a>
-                      </li>
-                    </ul>
+                      
+                    </ul>   
                   </div>
                 </div>
               </div>
@@ -220,7 +222,7 @@
         <!-- Page Footer-->
         <footer class="page-footer text-left text-sm-left">
           <div class="shell-wide">
-            <div class="footer-banner section-sm"><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid_big.jpg" alt="" height="0"></a></div>
+           <!--  <div class="footer-banner section-sm"><a class="banner" href="https://www.templatemonster.com/website-templates/monstroid2.html" target="_blank"><img src="images/monstroid_big.jpg" alt="" height="0"></a></div> -->
             <div class="page-footer-minimal">
               <div class="shell-wide">
                 <div class="range range-50">
