--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="swiper-container swiper-slider swiper-style-2" data-loop="false" data-autoplay="5500" data-simulate-touch="false" data-slide-effect="slide" data-direction="vertical">
                   <div class="swiper-wrapper">
 
-                     <div class="swiper-slide" data-slide-bg="images/slide-00.jpg">
+                 <!--     <div class="swiper-slide" data-slide-bg="images/slide-00.jpg">
                       <div class="swiper-slide-caption">
                         <div class="shell text-sm-left">
                           <h2 data-caption-animate="slideInDown" data-caption-delay="100">Gudauri  </h2>
@@ -139,11 +139,11 @@
                             <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
                             <h4 data-caption-animate="slideInLeft" data-caption-delay="700">One of the most magical places </h4>
                             <h3 data-caption-animate="slideInLeft" data-caption-delay="800">to ski on earth</h3>
-                          </div><!-- <a class="button button-effect-ujarak button-lg button-white-outline button-square" href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a> -->
+                          </div>
                         </div>
                       </div>
                     </div>
-
+ -->
 
                     <div class="swiper-slide" data-slide-bg="images/slide-01.jpg">
                       <div class="swiper-slide-caption">
@@ -166,7 +166,7 @@
                             <h4 data-caption-animate="slideInLeft" data-caption-delay="700">
                             RESTAURANT</h4>
                             <h3 data-caption-animate="slideInLeft" data-caption-delay="800">IN THE HEART OF THE CITY</h3>
-                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
+                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts2" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
                         </div>
                       </div>
                     </div>
@@ -180,7 +180,7 @@
                             <h4 data-caption-animate="slideInLeft" data-caption-delay="700">
                             and Chilim Bar</h4>
                             
-                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
+                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts2" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
                         </div>
                       </div>
                     </div>
@@ -195,7 +195,7 @@
                             <h4 data-caption-animate="slideInLeft" data-caption-delay="700">
                            with a high quality food</h4>
                             
-                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="about-us.html" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
+                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts2" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
                         </div>
                       </div>
                     </div>
@@ -265,7 +265,7 @@
             </div>
 
 
-            <div class="cell-sm-10 cell-md-8 cell-lg-5 reveal-flex wow fadeInUp" data-wow-delay=".3s">
+            <div class="cell-sm-10 cell-md-8 cell-lg-5 reveal-flex wow fadeInUp" data-wow-delay=".3s" id="contacts2">
               <div class="bg-primary section-wrap-content-var-1">
                 <div class="section-wrap-content-var-1-inner">
                   <h3>Contacts </h3>
