--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="rd-navbar-top-panel rd-navbar-collapse">
               <div class="rd-navbar-top-panel-inner">
                 <div class="left-side">
-                  <div class="group"><span class="text-italic">Follow Us:</span>
+                  <div class="group"><span class="text-italic"><!-- Follow Us: --></span>
                     <ul class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
@@ -81,8 +81,8 @@
                   <!-- Contact Info-->
                   <div class="contact-info">
                     <div class="unit unit-middle unit-horizontal unit-spacing-xs">
-                      <div class="unit__left"><span class="icon icon-primary text-middle mdi mdi-phone"></span></div>
-                      <div class="unit__body"><a class="text-middle" href="tel:#">+ (995) 555 39 82 82</a></div>
+                      <div class="unit__left"><!-- <span class="icon icon-primary text-middle mdi mdi-phone"></span> --></div>
+                     <!--  <div class="unit__body"><a class="text-middle" href="tel:#">+ (995) 555 39 82 82</a></div> -->
                     </div>
                   </div>
                 </div>
@@ -131,19 +131,7 @@
                 <div class="swiper-container swiper-slider swiper-style-2" data-loop="false" data-autoplay="5500" data-simulate-touch="false" data-slide-effect="slide" data-direction="vertical">
                   <div class="swiper-wrapper">
 
-                 <!--     <div class="swiper-slide" data-slide-bg="images/slide-00.jpg">
-                      <div class="swiper-slide-caption">
-                        <div class="shell text-sm-left">
-                          <h2 data-caption-animate="slideInDown" data-caption-delay="100">Gudauri  </h2>
-                          <div class="slider-subtitle-group">
-                            <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
-                            <h4 data-caption-animate="slideInLeft" data-caption-delay="700">One of the most magical places </h4>
-                            <h3 data-caption-animate="slideInLeft" data-caption-delay="800">to ski on earth</h3>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
- -->
+ 
 
                     <div class="swiper-slide" data-slide-bg="images/slide-01.jpg">
                       <div class="swiper-slide-caption">
@@ -255,6 +243,9 @@
 
       <section class="section section-md   text-center text-sm-left" >
         <div class="shell-wide">
+
+          <h3>Contact Us</h3>
+          <hr>
           <div class="range range-50 range-xs-center overflow-hidden">
             <div class="cell-sm-10 cell-md-8 cell-lg-7 wow fadeInUp" data-wow-delay=".1s">
               <div class="post-video post-video-border">
@@ -301,6 +292,26 @@
                         </dl>
                       </div>
 
+                      <div style="margin-top: 20px;">
+
+                  <h6 >Apartments</h6>
+                  <div class="group" style="padding-top: 8px;">
+                    <dl class="list-desc">
+                      <dt>Opening Hours:</dt>
+                      <dd><span>09:00 – 00:00</span></dd>
+                    </dl>
+                   
+                    <dl class="list-desc">
+                          <dt><span class="icon icon-sm mdi mdi-phone"></span></dt>
+                          <dd class="text-gray-darker"style="color: #fff;">  
+                           + (995) 555 398 282
+                          </dd>
+                        </dl>
+                      </div>
+
+
+
+
              
 
 
@@ -336,13 +347,13 @@
                           <div>
                             <dl class="list-desc">
                               <dt>Weekdays: </dt>
-                              <dd class="text-gray-darker"><span>8:00–20:00</span></dd>
+                              <dd class="text-gray-darker"><span>9:00 – 00:00</span></dd>
                             </dl>
                           </div>
                           <div>
                             <dl class="list-desc">
                               <dt>Weekends: </dt>
-                              <dd class="text-gray-darker"><span>9:00–18:00</span></dd>
+                              <dd class="text-gray-darker"><span>9:00 – 00:00</span></dd>
                             </dl>
                           </div>
                         </div>
@@ -360,12 +371,12 @@
                       <li>
                         <dl class="list-desc">
                           <dt><span class="icon icon-sm mdi mdi-map-marker"></span></dt>
-                          <dd><a class="link link-gray-darker" href="#">6036 Richmond hwy., Alexandria, VA, 2230</a></dd>
+                          <dd><a class="link link-gray-darker" href="#">4702 Vartsala Mountain, New Gudauri, Georgia </a></dd>
                         </dl>
                       </li>
                       <li>
                       <li>
-                        <p class="rights"><span>&copy;&nbsp;</span><span>2019</span><span>&nbsp;</span><span class="copyright-year"></span>Go Gudauri </p>
+                        <p class="rights"  style="padding-top: 20px;"><span>&copy;&nbsp;</span><span>2022</span><span>&nbsp;</span><span class="copyright-year"></span>Go Gudauri </p>
                       </li>
                       </li>
                     </ul>
@@ -373,14 +384,18 @@
                 </div>
                 <div class="cell-sm-8 cell-md-4 wow fadeInUp" data-wow-delay=".3s">
                   <div class="page-footer-minimal-inner-subscribe">
-                    <h4>Call Us:</h4>
+                    <h4>Follow Us :</h4>
 
-                    <dl class="list-desc">
-                          <dt><span class="icon icon-sm mdi mdi-phone"></span></dt>
-                          <dd class="text-gray-darker"> <a class="link link-gray-darker" href="tel:#">
-                          + (995) 555 39 82 82</a>
-                          </dd>
-                        </dl>
+                    <div class="left-side">
+                  <div class="group"><span class="text-italic"></span>
+                    <ul class="list-inline">
+                      <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
+                      <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
+                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
+                     <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
+                    </ul>
+                  </div>
+                </div>
                     <!-- RD Mailform-->
                    <!--  <form class="rd-mailform rd-mailform-inline form-center" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
                       <div class="form-wrap">
