--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="range range-50 range-md-justify range-sm-middle">
             <div class="cell-sm-6 cell-md-5">
              <h3>GoGudauri Spa Centre</h3>
-              <p> The serene pool at Royal Villas spa resort and hotel boasts sleek décor that features striking floor-to-ceiling teak columns set against a cool black tile floor. Poolside dining is also available, featuring a selection of dishes from any cuisine you desire that are both healthy and delicious.</p>
+              <p> The serene pool at Go Gudauri Spa resort  boasts sleek décor that features striking floor-to-ceiling teak columns set against a cool white tile floor. Poolside dining is also available, featuring a selection of dishes from any cuisine you desire that are both healthy and delicious.</p>
               <div class="group">
                     <dl class="list-desc">
                       <dt>Opening Hours:</dt>
@@ -307,12 +307,12 @@
                            + (995) 555 398 282
                           </dd>
                         </dl>
-                      </div>
+                      </div>  
 
 
 
 
-             
+               
 
 
 
