--- a/apartments.html
+++ b/apartments.html
@@ -67,7 +67,7 @@
                     <ul class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
-                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
+                        <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.co.uk/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html"></a></li>
                      <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
@@ -81,8 +81,8 @@
                   <!-- Contact Info-->
                   <div class="contact-info">
                     <div class="unit unit-middle unit-horizontal unit-spacing-xs">
-                      <div class="unit__left"><!-- <span class="icon icon-primary text-middle mdi mdi-phone"></span></div>
-                      <div class="unit__body"><a class="text-middle" href="tel:#">+ 995 555 398 282</a> --></div>
+                      <div class="unit__left" ><span style="color: #8f9091;" class="icon icon-primary text-middle mdi mdi-map-marker" ></span></div>
+                      <div  class="unit__body"><a style="color: #8f9091; font-family: " class="text-middle" href="tel:#">4702 New Gudauri, Georgia</a></div>
                     </div>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
                       </li>
                       <li><a href="gallery.html">Gallery</a>
                       </li>
-                      <li><a href="contacts.html">Contacts</a>
+                      <li><a href="index.html#contacts">Contacts</a>
                       </li>
                       
                     </ul>   
@@ -394,7 +394,7 @@ selected fabrics and finishes vary from room to room, offering guests a variety 
                     <ul class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
-                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
+                        <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.co.uk/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html"></a></li>
                      <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
