--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <ul class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
-                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
+                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.co.uk/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html"></a></li>
                      <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
@@ -81,8 +81,8 @@
                   <!-- Contact Info-->
                   <div class="contact-info">
                     <div class="unit unit-middle unit-horizontal unit-spacing-xs">
-                      <div class="unit__left"><!-- <span class="icon icon-primary text-middle mdi mdi-phone"></span> --></div>
-                     <!--  <div class="unit__body"><a class="text-middle" href="tel:#">+ (995) 555 39 82 82</a></div> -->
+                      <div class="unit__left" ><span style="color: #8f9091;" class="icon icon-primary text-middle mdi mdi-map-marker" ></span></div>
+                      <div  class="unit__body"><a style="color: #8f9091; font-family: " class="text-middle" href="tel:#">4702 New Gudauri, Georgia</a></div>
                     </div>
                   </div>
                 </div>
@@ -110,7 +110,7 @@
                      
                        <li><a href="gallery.html">Gallery</a>
                       </li>
-                      <li><a href="contacts.html">Contacts</a>
+                      <li><a href="#contacts">Contacts</a>
                       </li>
                       
                     </ul>   
@@ -131,7 +131,18 @@
                 <div class="swiper-container swiper-slider swiper-style-2" data-loop="false" data-autoplay="5500" data-simulate-touch="false" data-slide-effect="slide" data-direction="vertical">
                   <div class="swiper-wrapper">
 
- 
+  <div class="swiper-slide" data-slide-bg="images/slide-00.jpg">
+                      <div class="swiper-slide-caption">
+                        <div class="shell text-sm-left">
+                          <h2 data-caption-animate="slideInDown" data-caption-delay="100">Gudauri  </h2>
+                          <div class="slider-subtitle-group">
+                            <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
+                            <h4 data-caption-animate="slideInLeft" data-caption-delay="700">One of the most magical places </h4>
+                            <h3 data-caption-animate="slideInLeft" data-caption-delay="800">to ski on earth</h3>
+                          </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
+                        </div>
+                      </div>
+                    </div>
 
                     <div class="swiper-slide" data-slide-bg="images/slide-01.jpg">
                       <div class="swiper-slide-caption">
@@ -200,7 +211,7 @@
 
 
         <!--Indoor Pool-->
-      <section class="section section-md bg-white2 text-center text-sm-left" id="contacts">
+      <section class="section section-md bg-white2 text-center text-sm-left" >
         <div class="shell">
           <div class="range range-50 range-md-justify range-sm-middle">
             <div class="cell-sm-6 cell-md-5">
@@ -241,19 +252,13 @@
 
 
 
-      <section class="section section-md   text-center text-sm-left" >
+      <section class="section section-md   text-center text-sm-left" id="contacts" >
         <div class="shell-wide">
 
           <h3>Contact Us</h3>
           <hr>
           <div class="range range-50 range-xs-center overflow-hidden">
-            <div class="cell-sm-10 cell-md-8 cell-lg-7 wow fadeInUp" data-wow-delay=".1s">
-              <div class="post-video post-video-border">
-                <div class="post-video__image"><img src="images/video-bg-1020x525.jpg" alt="" width="1020" height="525"/>
-                </div>
-                <div class="post-video__body"><a class="link-control post-video__control" data-lightgallery="item" href="https://www.youtube.com/watch?v=I5FlP07kdvM"></a></div>
-              </div>
-            </div>
+           <iframe width="760" height="415" src="https://www.youtube.com/embed/fZ65J4-wVHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
             <div class="cell-sm-10 cell-md-8 cell-lg-5 reveal-flex wow fadeInUp" data-wow-delay=".3s" id="contacts2">
@@ -391,7 +396,7 @@
                     <ul class="list-inline">
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
                       <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
-                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
+                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.co.uk/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html"></a></li>
                      <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
