--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
           <h3>Contact Us</h3>
           <hr>
-          <div class="range range-50 range-xs-center overflow-hidden">
+          <div class="range range-50 range-xs-center overflow-hidden cell-sm-10 cell-md-8 cell-lg-5 ">
            <iframe width="760" height="415" src="https://www.youtube.com/embed/fZ65J4-wVHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
