--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
       <section class="section section-md   text-center text-sm-left" id="contacts" >
         <div class="shell-wide">
 
-          <h3>Contact Us</h3>
-          <hr>
+          <h3 style="padding-bottom: 20px;">Contact Us</h3>
+          
           <div class="range range-50 range-xs-center overflow-hidden cell-sm-10 cell-md-8 cell-lg-5 ">
            <iframe width="760" height="415" src="https://www.youtube.com/embed/fZ65J4-wVHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-            <div class="cell-sm-10 cell-md-8 cell-lg-5 reveal-flex wow fadeInUp" data-wow-delay=".3s" id="contacts2">
+            <div class="sm reveal-flex wow fadeInUp" data-wow-delay=".3s" id="contacts2" >
               <div class="bg-primary section-wrap-content-var-1">
                 <div class="section-wrap-content-var-1-inner">
                   <h3>Contacts </h3>
