--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                           <h2 data-caption-animate="slideInDown" data-caption-delay="100">Gudauri  </h2>
                           <div class="slider-subtitle-group">
                             <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
-                            <h4 data-caption-animate="slideInLeft" data-caption-delay="700">One of the most magical places </h4>
+                            <h4 data-caption-animate="slideInLeft" data-caption-delay="700">One of the most magical place </h4>
                             <h3 data-caption-animate="slideInLeft" data-caption-delay="800">to ski on earth</h3>
                           </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
                         </div>
