--- a/index.html
+++ b/index.html
@@ -257,11 +257,14 @@
 
           <h3 style="padding-bottom: 20px;">Contact Us</h3>
           
-          <div class="range range-50 range-xs-center overflow-hidden cell-sm-10 cell-md-8 cell-lg-5 ">
-           <iframe width="760" height="415" src="https://www.youtube.com/embed/fZ65J4-wVHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="range range-501 range-xs-center overflow-hidden cell-sm-10 cell-md-8 cell-lg-5 ">
+          <!--  <iframe width="760" height="415" src="https://www.youtube.com/embed/fZ65J4-wVHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+
+          <iframe src="https://player.vimeo.com/video/402141905?h=9ebea49333" width="760" height="415" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 
 
-            <div class="sm reveal-flex wow fadeInUp" data-wow-delay=".3s" id="contacts2" >
+
+            <div class="sm reveal-flex wow fadeInUp " data-wow-delay=".3s" id="contacts2" >
               <div class="bg-primary section-wrap-content-var-1">
                 <div class="section-wrap-content-var-1-inner">
                   <h3>Contacts </h3>
