--- a/gallery.html
+++ b/gallery.html
@@ -146,7 +146,7 @@
             <!-- <div class="cell-sm-6">
               <h3>Our Gallery</h3>
             </div> -->
-            <div class="cell-sm-6 text-sm-right"><a class="heading-link link-gray-darker" href="#">See All Photos</a></div>
+            <div class="cell-sm-6 text-sm-right"><a class="heading-link link-gray-darker" href="apartments.html">Homepage</a></div>
           </div>
           <hr>
           <div class="isotope-wrap" >
