--- a/gallery.html
+++ b/gallery.html
@@ -146,7 +146,7 @@
             <!-- <div class="cell-sm-6">
               <h3>Our Gallery</h3>
             </div> -->
-            <div class="cell-sm-6 text-sm-right"><a class="heading-link link-gray-darker" href="apartments.html">Homepage</a></div>
+           <!--  <div class="cell-sm-6 text-sm-right"><a class="heading-link link-gray-darker" href="apartments.html">Homepage</a></div> -->
           </div>
           <hr>
           <div class="isotope-wrap" >
@@ -281,9 +281,9 @@
                     <div class="left-side">
                   <div class="group"><span class="text-italic"></span>
                     <ul class="list-inline">
-                      <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
-                      <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
-                        <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.co.uk/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html"></a></li>
+                      <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/lasuite_gudauri/"></a></li>
+                      <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/La-Suite-108524931703421"></a></li>
+                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.com/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html?m=19905"></a></li>
                      <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
