--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
       <section class="section section-md   text-center text-sm-left" id="contacts" >
         <div class="shell-wide">
 
-          <h3 style="padding-bottom: 20px;">Contact Us</h3>
+          <h3 class="contact">Contact Us</h3>
           
           <div class="range range-501 range-xs-center overflow-hidden cell-sm-10 cell-md-8 cell-lg-5 ">
           <!--  <iframe width="760" height="415" src="https://www.youtube.com/embed/fZ65J4-wVHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
-          <iframe src="https://player.vimeo.com/video/402141905?h=9ebea49333" width="760" height="415" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="height" src="https://player.vimeo.com/video/402141905?h=9ebea49333" width="760"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 
 
 
@@ -397,9 +397,9 @@
                     <div class="left-side">
                   <div class="group"><span class="text-italic"></span>
                     <ul class="list-inline">
-                      <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/gogudauri/"></a></li>
-                      <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/Go-Gudauri-Apartments-108199883980766/"></a></li>
-                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.co.uk/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html"></a></li>
+                   <li><a class="icon icon-sm icon-secondary-5 fa fa-instagram" target="_blank" href="https://www.instagram.com/lasuite_gudauri/"></a></li>
+                      <li><a class="icon icon-sm icon-secondary-5 fa fa-facebook" target="_blank" href="https://www.facebook.com/La-Suite-108524931703421"></a></li>
+                       <li><a class="icon icon-sm icon-secondary-5 fa fa-tripadvisor" target="_blank" href="https://www.tripadvisor.com/Restaurant_Review-g1588192-d23837668-Reviews-La_Suite_Gudauri-Gudauri_Mtskheta_Mtianeti_Region.html?m=19905"></a></li>
                      <!--  <li><a class="icon icon-sm icon-secondary-5 fa fa-twitter" href="#"></a></li> -->
                     </ul>
                   </div>
