--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <!-- Site Title-->
-    <title>Home</title>
+    <title>GoGudauri</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -150,7 +150,7 @@
                           <h2 data-caption-animate="slideInDown" data-caption-delay="100">Relax  </h2>
                           <div class="slider-subtitle-group">
                             <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"></div>
-                            <h4 data-caption-animate="slideInLeft" data-caption-delay="700">Experience the luxurious level</h4>
+                            <h4 data-caption-animate="slideInLeft" data-caption-delay="700" style="">Experience the luxurious level</h4>
                             <h3 data-caption-animate="slideInLeft" data-caption-delay="800">of our spa treatments</h3>
                           </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
                         </div>
@@ -177,7 +177,7 @@
                             <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"> </div>
                             <h3 data-caption-animate="slideInLeft" data-caption-delay="800"> Georgian-European Cuisine</h3>
                             <h4 data-caption-animate="slideInLeft" data-caption-delay="700">
-                            and Chilim Bar</h4>
+                            and HOOKAH BAR</h4>
                             
                           </div><a class="button button-effect-ujarak button-lg button-white-outline button-square" href="#contacts2" data-caption-animate="slideInLeft" data-caption-delay="1150"><span>contacts</span></a>
                         </div>
@@ -187,7 +187,7 @@
                     <div class="swiper-slide" data-slide-bg="images/slide-04.jpg">
                       <div class="swiper-slide-caption">
                         <div class="shell text-sm-left">
-                          <h2 data-caption-animate="slideInDown" data-caption-delay="100">Chalet </h2>
+                          <h2 data-caption-animate="slideInDown" data-caption-delay="100">CHALET </h2>
                           <div class="slider-subtitle-group"> 
                             <div class="decoration-line" data-caption-animate="slideInDown" data-caption-delay="400"> </div>
                             <h3 data-caption-animate="slideInLeft" data-caption-delay="800">another fabulous choice </h3>
